--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
             <h2 class="text-6xl md:text-8xl font-extrabold text-[#a08a72] mb-4">Bienvenido</h2>
             <p class="mt-4 text-xl text-gray-600">Presiona el botón de Reseña o Reporte</p>
         </div>
+        <div id="video-container" class="max-w-4xl mx-auto mb-12 flex flex-col md:flex-row gap-4">
+    <iframe width="50%" height="315" src="https://www.youtube.com/embed/kBGwZyFLCpg" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen class="rounded-lg shadow-xl"></iframe>
+    
+    <iframe width="50%" height="315" src="https://www.youtube.com/embed/0LgHwD0Ayvs" 
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen class="rounded-lg shadow-xl"></iframe>
+</div>
         <main id="main-content" class="hidden grid grid-cols-1 md:grid-cols-2 gap-8 transition-all duration-500">
             
             <div id="col-resena" class="w-full space-y-8">
